fix(TimerAlert): Add spacing and centralize text

--- a/src/features/timer/TimerAlert.module.scss
+++ b/src/features/timer/TimerAlert.module.scss
@@ -1,4 +1,6 @@
 .alert {
   position: absolute;
   bottom: 1rem;
+  padding: 2rem;
+  text-align: center;
 }
